Fix notebook cell types: convert all raw cells to markdown cells

--- a/content/02-training-operationalization.ipynb
+++ b/content/02-training-operationalization.ipynb
@@ -14,16 +14,21 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
         }
       },
-      "source": []
+      "source": [
+        "MLE should be able to use configurations to deploy the ML pieplines.\n",
+        "Configurations specify variables\n",
+        "\n",
+        "- THe target deployment environment (development, test, staging and so on)\n"
+      ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -41,7 +46,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -52,7 +57,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -98,7 +103,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -121,7 +126,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -134,7 +139,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -166,7 +171,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -208,7 +213,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -226,7 +231,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -259,7 +264,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -295,7 +300,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -337,7 +342,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -379,7 +384,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -406,7 +411,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
