Add detailed explanations of testing tiers and data sizes in training operationalization notebook
- Expanded markdown content to include descriptions of different testing tiers and their purposes.
- Added a new section outlining typical data sizes associated with each test type.
- Enhanced clarity and structure of the notebook for better understanding of CI/CD testing processes.

--- a/content/02-training-operationalization.ipynb
+++ b/content/02-training-operationalization.ipynb
@@ -79,7 +79,38 @@
         "For example,\n",
         "- Container images stored in a container registry.\n",
         "- Training-pipeline runtime representation, which references the components stored in an artifacts repository\n",
-        "```\n"
+        "```\n",
+        "\n",
+        "2. In the middle CD (continuous delivery) stage, the tested training pipeline artifacts (artficats are exactly what CI has pushed to registry) are deployed to a staing env, where the pipeline goes through `end-to-end` and `acceptance` testing before being released to the prod env. Usually, pipelines are tested in non-prod environments on a subset of prod data, while the full-scale trianing is performed only in prod env.\n",
+        "\n",
+        "3. The newly deployed training pipeline will be smoke-tested. Now, the pipeline is productionalized. If the new pipeline fails to product a deployable model, the model serving system can fall back to the model that was produced by the current training pipeline.\n",
+        "\n",
+        "What are the difference between different tests?\n",
+        "\n",
+        "| Test type              | Data size     | Goal                                        |\n",
+        "| ---------------------- | ------------- | ------------------------------------------- |\n",
+        "| Unit                   | none (mocked) | One function behaves correctly              |\n",
+        "| Smoke                  | kilobytes     | Whole pipeline starts & finishes            |\n",
+        "| Integration/Acceptance | MB–GB sample  | Functional correctness & minimal metric bar |\n",
+        "| Full retraining        | all prod data | Best model quality                          |\n"
+      ]
+    },
+    {
+      "cell_type": "raw",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "### Test tiers and data sizes\n",
+        "\n",
+        "| Tier | Typical data size | Purpose | Representative sources |\n",
+        "| --- | --- | --- | --- |\n",
+        "| Unit | No real data – mocks or tiny fixtures | Verify a single function/class behaves as expected. | Atlassian |\n",
+        "| Smoke / Sanity | Kilobytes – synthetic or ≤ 1 % sample | Fast \"does it start and finish?\" run of the whole pipeline to catch missing deps, bad paths, schema mismatches. | Stack Overflow; LaunchDarkly; Semaphore |\n",
+        "| Integration / Acceptance | MB–GB subset of production | End-to-end functional test: components interact correctly and minimal metric/bar (e.g., accuracy > baseline) is met. Often automated acceptance tests double as integration tests. | Atlassian; Reddit; Semaphore |\n",
+        "| Full retraining (prod) | All available production data | Run the expensive job only when prior stages are green; objective is the best-quality model, not pipeline validation. |  |\n"
       ]
     },
     {
